@@ -19,7 +19,6 @@ package org.apache.solr.cloud;
 import com.carrotsearch.randomizedtesting.rules.SystemPropertiesRestoreRule;
 import org.apache.commons.io.FileUtils;
 import org.apache.solr.SolrTestCaseJ4;
-import org.apache.solr.common.SolrException;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.core.NodeConfig;
@@ -54,11 +53,6 @@ public class SolrXmlInZkTest extends SolrTestCaseJ4 {
 
   private SolrDispatchFilter solrDispatchFilter;
 
-  @Before
-  public void before() {
-    System.setProperty("solr.solrxml.location", "zookeeper");
-  }
-  
   @After
   public void after() {
     if (solrDispatchFilter != null) {
@@ -146,13 +140,11 @@ public class SolrXmlInZkTest extends SolrTestCaseJ4 {
   }
 
   @Test
-  public void testNotInZkAndShouldBe() throws Exception {
+  public void testNotInZkFallbackLocal() throws Exception {
     try {
       setUpZkAndDiskXml(false, true);
-      fail("Should have gotten an exception here!");
-    } catch (InvocationTargetException ite) {
-      assertEquals("Should have an exception here, file not in ZK.",
-          "Could not load solr.xml from zookeeper", ite.getTargetException().getMessage());
+      assertEquals("Should have gotten the default port",
+          cfg.getCloudConfig().getSolrHostPort(), 8983);
     } finally {
       closeZK();
     }
@@ -161,7 +153,6 @@ public class SolrXmlInZkTest extends SolrTestCaseJ4 {
   @Test
   public void testNotInZkOrOnDisk() throws Exception {
     try {
-      System.clearProperty("solr.solrxml.location");
       System.setProperty("hostPort", "8787");
       setUpZkAndDiskXml(false, false); // solr.xml not on disk either
       fail("Should have thrown an exception here");
@@ -176,47 +167,10 @@ public class SolrXmlInZkTest extends SolrTestCaseJ4 {
   @Test
   public void testOnDiskOnly() throws Exception {
     try {
-      System.clearProperty("solr.solrxml.location");
       setUpZkAndDiskXml(false, true);
       assertEquals("Should have gotten the default port", cfg.getCloudConfig().getSolrHostPort(), 8983);
     } finally {
       closeZK();
-    }
-  }
-
-  @Test
-  public void testBadSysProp() throws Exception {
-    try {
-      System.setProperty("solr.solrxml.location", "solrHomeDir");
-      setUpZkAndDiskXml(false, true);
-      fail("Should have thrown exception in SolrXmlInZkTest.testBadSysProp");
-    } catch (InvocationTargetException ite) {
-      assertEquals("Should have an exception in SolrXmlInZkTest.testBadSysProp, sysprop set to bogus value.",
-          ite.getTargetException().getMessage(), "Bad solr.solrxml.location set: solrHomeDir - should be 'solrhome' or 'zookeeper'");
-    } finally {
-      closeZK();
-    }
-
-  }
-
-  //SolrDispatchFilter.protected static ConfigSolr loadConfigSolr(SolrResourceLoader loader) {
-  @Test
-  public void testZkHostDiscovery() throws ClassNotFoundException, NoSuchMethodException,
-      IllegalAccessException, InstantiationException, InvocationTargetException {
-
-    // Should see an error when zkHost is not defined but solr.solrxml.location is set to zookeeper.
-    System.clearProperty("zkHost");
-    try {
-      Method method = SolrDispatchFilter.class.getDeclaredMethod("loadNodeConfig", String.class, Properties.class);
-      method.setAccessible(true);
-      if (solrDispatchFilter != null) solrDispatchFilter.destroy();
-      solrDispatchFilter = new SolrDispatchFilter();
-      method.invoke(solrDispatchFilter, "", new Properties());
-      fail("Should have thrown an exception");
-    } catch (InvocationTargetException ite) {
-      assertTrue("Should be catching a SolrException", ite.getTargetException() instanceof SolrException);
-      assertEquals("Caught Solr exception", ite.getTargetException().getMessage(),
-          "Could not load solr.xml from zookeeper: zkHost system property not set");
     }
   }
 
