@@ -57,6 +57,9 @@ Upgrading from Solr 5.2
   which can then be used to prepare for the distributed request. Users with custom
   ShardHandler implementations would need to modify their code to this effect.
 
+* The system property "solr.solrxml.location" is not supported any more. Now, solr.xml is first
+  looked up in zookeeper, and if not found, fallback to SOLR_HOME. See SOLR-7735 for more info.
+
 Detailed Change List
 ----------------------
 
@@ -322,6 +325,9 @@ Other Changes
   
 * SOLR-7823: TestMiniSolrCloudCluster.testCollectionCreateSearchDelete async collection-creation (sometimes)
   (Christine Poerschke)
+
+* SOLR-7735: Look for solr.xml in Zookeeper by default in SolrCloud mode. If not found, it will be loaded
+  from $SOLR_HOME/solr.xml as before. Sysprop solr.solrxml.location is now gone. (janhoy)
 
 * SOLR-7854: Remove unused ZkStateReader.updateClusterState(false) method. (Scott Blum via shalin)
 
